# AgentHeph

./: .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
agent_core/: __init__.py
agent_core/api/: __init__.py  app.py  deployments.py
agent_core/eval/: __init__.py  harness.py  runner.py
agent_core/guide/: __init__.py  cards.py  cluster.py  evidence.py  extractors.py  facts.py  inventory.py  normalize.py  pipeline.py  publish.py  store.py  validate.py
agent_core/manifest/: __init__.py  loader.py
agent_core/providers/: __init__.py  base.py
agent_core/runtime/: __init__.py  audit.py  checkpoint.py  governance.py  graph.py  llm.py  prompt.py  stream.py
agent_core/schemas/: __init__.py  effect.py  identity.py  manifest.py  sse.py
agent_core/write/: __init__.py  models.py  schema.py  store.py
contracts/: chat_request.schema.json  event_envelope.schema.json  generate_schemas.py  manifest.schema.json
contracts/fixtures/: README.md
design/: ARCHITECTURE_DIAGRAMS.html  ARCHITECTURE_DIAGRAMS.md  GUIDE_ARCHITECTURE.html  GUIDE_ARCHITECTURE_EN.html  MVP_DESIGN.md  PHASE2_ARCHITECTURE.html  PLATFORM_DESIGN.md  ROADMAP.md  STUDIO_ARCHITECTURE.html
evals/: .gitkeep  __init__.py  demo_golden.py
migrations/: env.py
plugins/: __init__.py
plugins/bau/: __init__.py  providers.py
studio/: __init__.py
tests/: fakes.py  guide_sample.py  test_api_sse.py  test_bau_plugin.py  test_datascope.py  test_eval_gate.py  test_fixtures.py  test_governance.py  test_guide_inventory.py  test_guide_pipeline.py  test_guide_runtime.py  test_manifest_schema.py  test_migrations.py  test_runtime_stream.py  test_sse_contract.py  test_write_store.py
(+15 files in other folders)
